# quantTechLab

./: .gitignore  2.0.ipynb  Connect_Camera.ipynb  Connect_Levenh.ipynb  Connect_Serial.ipynb  PCA_experiments.ipynb  Phase measurement greedy search.ipynb  Process_files.ipynb  README.md  Statistical phase estimation.ipynb  Test-img.ipynb  Test_model.ipynb  Test_serial.ipynb  Test_serial.py  data_files.csv  data_generator.py  data_labels.csv  dict2obj.py  fit_pca.py  gauss_est.ipynb  gauss_est.py  main.ipynb  main.py  main_old.ipynb
Experiment_run/: Cameras_switching.ipynb  server.py
Fit/: Annealing.py  Debugging device func.ipynb  Device adjusments.ipynb  Loss landscape.ipynb  LossLandscape.py  Plot_expdata.ipynb  Test device func.ipynb  Untitled.ipynb  Vis-Anneal.ipynb  data.md  data_05-07-2018_20-20_port0.csv  f_func.m  f_func_v.m  np_fun.py  np_fun_adj.py  np_fun_ideal.py  plotting.py  preprocessing.py  raw_csv_read.m  readme.md  tf_fun.py
Intensity_mesurments/: Connect_Camera.ipynb  Connect_Levenh.ipynb  Connect_Serial.ipynb  Test_serial.ipynb
Power_calibration_data/: Power_measurm2.txt  Power_measurm4.txt
analysis/: Classical method.ipynb  Compile_the_data.py  Datagen.py  Ensemble.ipynb  ImageDataset.py  Random forest and XGBOOST.ipynb  data_2020-02-14_16-59.npy  data_2020-02-18_11-02.npy  data_generator.py  dataset_inspection.ipynb  ensemble_model.py  fit_pca.py  fitting_data.py  k - neighbourhood.ipynb  main.ipynb  server.py  train.ipynb
corr/: Cargo.toml
corr/src/: main.rs
data/: ImgGen.ipynb  data_02-10-2018_17-44_port2.csv  (+1 more)
(+28 files in other folders)
