[package]
name = "corr"
version = "0.1.0"
authors = ["DaniloZZZ <lkv97dn@gmail.com>"]
edition = "2018"

[dependencies]

# The release profile, used for `cargo build --release` (and the dependencies
# for `cargo test --release`,  including the local library or binary).
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false
